<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="mediateka">Медиатека</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="black">Темная тема</string>
    <string name="help">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="share_app_link">https://practicum.yandex.ru/</string>
    <string name="extra_text_write_email">exen1993@gmail.com</string>
    <string name="extra_text_write_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="extra_text_write_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="terms_use_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="name_music_group">TextView</string>
    <string name="song_duration">TextView</string>
    <string name="song_name">trackName</string>
    <string name="image_album">Image album</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="communication_problems_1">Проблемы со связью</string>
    <string name="communication_problems_2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="refresh">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="your_library_empty">Ваша медиатека пуста</string>
    <string name="not_created_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="hint_name">Название*</string>
    <string name="hint_description">Описание</string>
    <string name="button_create">Создать</string>
    <string name="drag_handle">drag handle</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="duration">Длительность</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="album_picture">album picture</string>
    <string name="back_button">back button</string>
    <string name="_00_00">00:00</string>
    <string name="add_to_playlist">add to playlist</string>
    <string name="play">play button</string>
    <string name="pause_button">pause button</string>
    <string name="like_button">like button</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="sure_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>

    <plurals name="tracks">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>