<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top"
    android:paddingStart="4dp"
    android:paddingEnd="@dimen/padding_end"
    android:background="@color/white">

    <Button
        android:id="@+id/backButtonSettingsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/Settings"
        android:textSize="@dimen/main_text_size"
        android:letterSpacing="0"
        android:fontFamily="@font/yt_regular"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:gravity="left"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:icon="@drawable/arrow_back"
        app:iconGravity="textStart"
        app:iconPadding="24dp"
        app:iconTint="@color/black">

        </Button>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/black"
        android:textSize="@dimen/settings_text_size"
        android:letterSpacing="0"
        android:fontFamily="@font/yt_medium"
        android:textColor="#000000"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:fontFamily="@font/yt_medium"
        android:gravity="start"
        android:letterSpacing="0"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="@dimen/settings_text_size"
        app:icon="@drawable/share"
        app:iconGravity="end"
        app:iconTint="#AEAFB4" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/help"
        android:textSize="@dimen/settings_text_size"
        android:letterSpacing="0"
        android:fontFamily="@font/yt_medium"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:gravity="start"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:icon="@drawable/support"
        app:iconGravity="end"
        app:iconTint="#AEAFB4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textSize="@dimen/settings_text_size"
        android:letterSpacing="0"
        android:fontFamily="@font/yt_medium"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:gravity="left"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:icon="@drawable/arrow_forward"
        app:iconGravity="end"
        app:iconTint="#AEAFB4"/>



</LinearLayout>