<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.activity.SearchFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/main_text_size_22"
            tools:targetApi="p" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/light_grey"
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:drawableTint="@color/grey"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:minHeight="36dp"
            android:paddingStart="13dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            app:icon="@drawable/search"
            app:iconGravity="textStart" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:src="@drawable/clear_icon"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/you_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/you_search"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_19"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSongItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            tools:listitem="@layout/song_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_history"
            android:layout_width="148dp"
            android:layout_height="36dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="24dp"
            android:layout_weight="0"
            android:background="@drawable/button_radius_54"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="158dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/placeholder_nothing_was_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/text_placeholder_nothing_was_found"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            app:srcCompat="@drawable/nothing_was_found" />

        <TextView
            android:id="@+id/image_placeholder_nothing_was_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/nothing_was_found"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_19" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_communication_problems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/text_placeholder_communication_problems"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/communication_problems" />

        <TextView
            android:id="@+id/image_placeholder_communication_problems_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/communication_problems_1"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_19" />

        <TextView
            android:id="@+id/image_placeholder_communication_problems_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:letterSpacing="0"
            android:text="@string/communication_problems_2"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_19" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refresh_button"
            android:layout_width="91dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_radius_54"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>