<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_grey"
    tools:context=".currentPlaylist.ui.currentPlaylist.CurrentPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimary"
            android:elevation="-1dp"
            android:maxHeight="360dp"
            android:minHeight="360dp"
            android:scaleType="centerInside"
            android:src="@drawable/placeholder_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="Best songs 2021" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textTitle"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            tools:text="Best songs 2021" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textDescription"
            app:layout_constraintTop_toBottomOf="@+id/textDescription" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ellipse_black"
            app:layout_constraintBottom_toBottomOf="@+id/textTime"
            app:layout_constraintStart_toEndOf="@+id/textTime"
            app:layout_constraintTop_toTopOf="@+id/textTime" />

        <TextView
            android:id="@+id/textCountTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textTime"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/textTime" />


        <ImageView
            android:id="@+id/shareButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/share_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTime" />

        <ImageView
            android:id="@+id/imageMore"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/more"
            app:layout_constraintStart_toEndOf="@+id/shareButton"
            app:layout_constraintTop_toTopOf="@+id/shareButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg_16"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="210dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/drag_handle"
            android:src="@drawable/drag_handle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            tools:listitem="@layout/song_item">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playlists_more_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg_16"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="380dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/drag_handle"
            android:src="@drawable/drag_handle" />

        <include
            android:id="@+id/playlist_item_player"
            layout="@layout/playlist_item_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/text_view_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ys_display_regular"
            android:paddingVertical="21dp"
            android:paddingStart="16dp"
            android:text="@string/share"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_16"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_view_edit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ys_display_regular"
            android:paddingVertical="21dp"
            android:paddingStart="16dp"
            android:text="@string/edit_info"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_16"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_view_delete_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ys_display_regular"
            android:paddingVertical="21dp"
            android:paddingStart="16dp"
            android:text="@string/delete_playlist"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_16"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>